colocando para arquitetura limpa